# our_project

./: CMakeLists.txt  CMakeLists.txt.user.74bafca  cambiner.cpp  cambiner.h  mainwindow.ui  transformer.cpp  transformer.h
FrontedObjects/: DialogWindow.cpp  DialogWindow.h  FrontedCombiner.cpp  FrontedCombiner.h  FrontedGenerator.cpp  FrontedGenerator.h  FrontedHarmonyOscilloscope.cpp  FrontedHarmonyOscilloscope.h  FrontedHighPassFilter.cpp  FrontedHighPassFilter.h  FrontedLowPassFilter.cpp  FrontedLowPassFilter.h  FrontedOscilloscope.cpp  FrontedOscilloscope.h  FrontedTransformer.cpp  FrontedTransformer.h  VirualLabel.cpp  VirualLabel.h
headers/: Cambiner.h  Forward_fourier_decomposer.h  FrontedTransformer.cpp  FrontedTransformer.h  Generator.h  High_pass_filter.h  Low_pass_filter.h  Reverse_fourier_decomposer.h  Signal.h  Spline.h  Transformer.h  block.h  block_high_pass_filter.h  block_low_pass_filter.h  cambiner.h  form.h  form_filters.h  form_generator.h  form_transformer.h  generator.h  graph.h  harmony_oscilloscope.h  main_controller.h  mainwindow.h  oscilloscope.h  spline.h  transformer.h  widget.h  widget_old.h
headers/Filters/: Filter_Prototype.h  High_pass_filter.h  Low_pass_filter.h
headers/logic_of_fronted/: CustomFrame.h  MoveItem.h  graphmap.cpp  graphmap.h  my_grpah_view.h  mylistwidget.h
signals/: Cos.txt  CustomSignal.txt  Meander.txt  Sin.txt  cos.txt  sin.txt
source/: Cambiner.cpp  Forward_fourier_decomposer.cpp  Generator.cpp  High_pass_filter.cpp  Low_pass_filter.cpp  Reverse_fourier_decomposer.cpp  Signal.cpp  Transformer.cpp  block.cpp  block_connector.cpp  block_high_pass_filter.cpp  block_low_pass_filter.cpp  cambiner.cpp  design_controller.cpp  form.cpp  form.ui  form1.cpp  form2.cpp  form_filters.cpp  form_filters.ui  form_generator.cpp  form_generator.ui  form_transformer.cpp  form_transformer.ui  generator.cpp  graph.cpp  graph.ui  harmony_oscilloscope.cpp  main.cpp  main_controller.cpp  mainwindow.cpp  oscilloscope.cpp  qcustomplot.cpp  transformer.cpp  widget.cpp  widget.ui  widget_old.cpp
source/Filters/: Filter_Prototype.cpp  Filter_Prototype.h  High_pass_filter.cpp  Low_pass_filter.cpp
source/logic_of_fronted/: CustomFrame.cpp  MoveItem.cpp  my_grpah_view.cpp  mylistwidget.cpp
